--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5521,6 +5521,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
 }
+.navbar-brand a{
+  font-size: 69px;
+}
 .navbar-brand:hover,
 .navbar-brand:focus {
   color: inherit;
@@ -5996,7 +5999,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 .dropdown-menu > li > a {
   display: block;
-  padding: 16px 89px 16px 28px;
+  padding: 16px 13px 16px 13px;
   clear: both;
   font-weight: normal;
   border-bottom: 1px solid #d9d9d9;
@@ -6389,7 +6392,7 @@ a.badge:focus {
 .jumbotron em {
   text-transform: uppercase;
   font-style: normal;
-  font-size: 94px;
+  font-size: 60px;
   font-weight: 900;
   color: #21c2f8;
   line-height: 110px;
@@ -6473,7 +6476,7 @@ a.badge:focus {
   .jumbotron em {
     font-size: 50px;
     font-weight: 800;
-    line-height: 70px;
+    line-height: 50px;
   }
   .jumbotron .wrap p {
     width: 100%;
